c/src/test/resources/c/nec_bnc/invalid/ex10-3.ctrl
<controlFile>
  <sourceFile name="../ex10.c" id="1" />
  <run>
    <startPosition fileId="1" line="16" />
    <wayPoint fileId="1" line="17">
      <command>
        <cascadeFunction> cascade_assume </cascadeFunction>
        <argument>addr</argument>
      </command>
    </wayPoint>
    <wayPoint fileId="1" line="20">
      <command>
        <cascadeFunction> cascade_check </cascadeFunction>
        <argument><![CDATA[
          valid(&(addr->len))
        ]]></argument>
      </command>
    </wayPoint>
    <wayPoint fileId="1" line="23">
      <function funcName="f1" >
        <wayPoint fileId="1" line="39" >
          <loop iterTimes="3" >
            <wayPoint fileId="1" line="40" >
              <command>
                <cascadeFunction> cascade_check </cascadeFunction>
                <argument><![CDATA[
                  valid(&addr->dat[i - 1])
                ]]>
                </argument>
              </command>
            </wayPoint>
          </loop>
        </wayPoint>
      </function>
    </wayPoint>
    <endPosition fileId="1" line="24" />
  </run>
</controlFile>